# hf_script

./: .gitignore  CMakeLists.txt  readme.md
hfs/: CMakeLists.txt  HFS.hpp  HFS_Scope.cpp  HFS_Scope.hpp  HFS_Script.cpp  HFS_Script.hpp  HFS_ScriptCompiler.cpp  HFS_ScriptCompiler.hpp  HFS_ScriptHolder.cpp  HFS_ScriptHolder.hpp  HFS_ScriptRunner.cpp  HFS_ScriptRunner.hpp  HFS_Variable.cpp  HFS_Variable.hpp  Main.cpp
hfs/basic/: HFS_Essentials.cpp  HFS_Essentials.hpp  HFS_Math.cpp  HFS_Math.hpp
hfs/core/: HFS_OperationRunner.cpp  HFS_OperationRunner.hpp  HFS_Operator.hpp  HFS_PatternKeys.cpp  HFS_PatternKeys.hpp  HFS_Token.cpp  HFS_Token.hpp  HFS_TokenGroup.cpp  HFS_TokenPattern.cpp  HFS_TokenPattern.hpp
hfs/operations/: HFS_BranchOperation.cpp  HFS_BranchOperation.hpp  HFS_ConstructDictionaryOperation.cpp  HFS_ConstructDictionaryOperation.hpp  HFS_DeepenScopeOperation.cpp  HFS_DeepenScopeOperation.hpp  HFS_FlattenScopeOperation.cpp  HFS_FlattenScopeOperation.hpp  HFS_FunctionCallOperation.cpp  HFS_FunctionCallOperation.hpp  HFS_Operation.cpp  HFS_Operation.hpp  HFS_Operations.hpp  HFS_OperatorOperation.cpp  HFS_OperatorOperation.hpp  HFS_RawValueOperation.cpp  HFS_RawValueOperation.hpp  HFS_ReleaseOperation.cpp  HFS_ReleaseOperation.hpp  HFS_ReturnOperation.cpp  HFS_ReturnOperation.hpp  HFS_SequentialOperation.cpp  HFS_SetOperation.cpp  HFS_SetOperation.hpp  HFS_SubCallOperation.cpp  HFS_SubCallOperation.hpp  HFS_VariableRetrievalOperation.cpp  HFS_VariableRetrievalOperation.hpp
hfs/utility/: HFS_Utility.cpp  HFS_Utility.hpp
src/: CMakeLists.txt  HFS_OperationRunner.cpp  HFS_OperationRunner.hpp  HFS_Scope.cpp  HFS_Scope.hpp  HFS_Script.cpp  HFS_Script.hpp  HFS_ScriptRunner.cpp  HFS_ScriptRunner.hpp  HFS_Token.hpp  HFS_TokenGroup.cpp  HFS_TokenGroup.hpp  HFS_Variable.cpp  HFS_Variable.hpp  Main.cpp
src/basic/: HFS_Essentials.cpp  HFS_Essentials.hpp  HFS_Math.cpp  HFS_Math.hpp
src/core/: HFS_Token.hpp  HFS_TokenGroup.cpp  HFS_TokenGroup.hpp
src/lines/: HFS_ScriptLine.hpp
src/operations/: HFS_BranchOperation.cpp  HFS_BranchOperation.hpp  HFS_ConstructDictionaryOperation.cpp  HFS_ConstructDictionaryOperation.hpp  HFS_DeepenScopeOperation.cpp  HFS_DeepenScopeOperation.hpp  HFS_FlattenScopeOperation.cpp  HFS_FlattenScopeOperation.hpp  HFS_FunctionCallOperation.cpp  HFS_FunctionCallOperation.hpp  HFS_IfOperation.cpp  HFS_IfOperation.hpp  HFS_Operation.cpp  HFS_Operation.hpp  HFS_Operations.hpp  HFS_RawValueOperation.cpp  HFS_RawValueOperation.hpp  HFS_ReleaseOperation.cpp  HFS_ReleaseOperation.hpp  HFS_ReturnOperation.hpp  HFS_SequentialOperation.hpp  HFS_SetOperation.cpp  HFS_SetOperation.hpp  HFS_SubCallOperation.cpp  HFS_SubCallOperation.hpp  HFS_VariableRetrievalOperation.cpp  HFS_VariableRetrieveOperation.cpp  HFS_VariableRetrieveOperation.hpp  HFS_WaitOperation.cpp  HFS_WaitOperation.hpp
src/utility/: HFS_Utility.cpp
